--- a/Castaway_web/css/style.css
+++ b/Castaway_web/css/style.css
@@ -80,9 +80,9 @@ body{background-color: #191919;}
 .next{
     font-size: 75px;
 }
-.next::before{
-}
+/* .next::before{
+} */
 .level{font-size: 80px; font-weight: bold;}
-.home__content-icons { }
+/* .home__content-icons { }
 .icons { }
-.icons__text { }
+.icons__text { } */
